Bug 870598 - Don't send the frameloader-visibility-changed notification if the frameloader's visibility didn't actually change. r=khuey, a=tef+